--- a/WPv3/css/posts-list.css
+++ b/WPv3/css/posts-list.css
@@ -229,3 +229,9 @@
         margin-left: 98px;
     }
 }
+
+@media (-ms-high-contrast) {
+    .posts-list.win-listview .win-groupheader .headerTemplateText {
+        background-color: ButtonFace;
+    }
+}
